fix tuners